src/qnn_wrapper.h

// 定义状态码，和 C++ 中 sample_app::StatusCode 保持一致
typedef enum {
    QNN_STATUS_SUCCESS = 0,
    QNN_STATUS_FAILURE,
    QNN_STATUS_FAILURE_INPUT_LIST_EXHAUSTED,
    QNN_STATUS_FAILURE_SYSTEM_ERROR,
    QNN_STATUS_FAILURE_SYSTEM_COMMUNICATION_ERROR,
    QNN_STATUS_FEATURE_UNSUPPORTED
} QnnStatus;
// 定义输出数据类型
typedef enum {
    QNN_OUTPUT_DATA_TYPE_FLOAT_ONLY = 0,
    QNN_OUTPUT_DATA_TYPE_NATIVE_ONLY,
    QNN_OUTPUT_DATA_TYPE_FLOAT_AND_NATIVE,
    QNN_OUTPUT_DATA_TYPE_INVALID
} QnnOutputDataType;
// 定义输入数据类型
typedef enum {
    QNN_INPUT_DATA_TYPE_FLOAT = 0,
    QNN_INPUT_DATA_TYPE_NATIVE,
    QNN_INPUT_DATA_TYPE_INVALID
} QnnInputDataType;
// 不透明指针类型，用户只能通过接口操作
typedef struct QnnSampleApp QnnSampleApp;
/* 
 * 创建 QnnSampleApp 对象。
 * 参数 backendPath 和 modelPath 为后端库及模型库文件路径，
 * outputDataType 与 inputDataType 为数据类型枚举值。
 * dataDir 为应用数据目录路径，用于切换工作目录。
 * htpConfig 为HTP后端特定配置，如果不是HTP后端则忽略。
 * 如果创建失败返回 NULL。
 */
QnnSampleApp* qnn_sample_app_create(const char* backendPath, 
                                    const char* modelPath, 
                                    QnnOutputDataType outputDataType, 
                                    QnnInputDataType inputDataType, 
                                    const char* dataDir
                                   );
/* 释放 QnnSampleApp 对象 */
void qnn_sample_app_destroy(QnnSampleApp* app);
/* 以下接口分别包装了 C++ 对象的方法，返回的状态码与 C++ 中保持一致 */
QnnStatus qnn_sample_app_initialize(QnnSampleApp* app);
QnnStatus qnn_sample_app_initialize_profiling(QnnSampleApp* app);
QnnStatus qnn_sample_app_create_context(QnnSampleApp* app);
QnnStatus qnn_sample_app_compose_graphs(QnnSampleApp* app);
QnnStatus qnn_sample_app_finalize_graphs(QnnSampleApp* app);
QnnStatus qnn_sample_app_execute_graphs(QnnSampleApp* app);
QnnStatus qnn_sample_app_register_op_packages(QnnSampleApp* app);
QnnStatus qnn_sample_app_create_from_binary(QnnSampleApp* app);
QnnStatus qnn_sample_app_save_binary(QnnSampleApp* app, const char* outputPath, const char* binaryName);
QnnStatus qnn_sample_app_free_context(QnnSampleApp* app);
QnnStatus qnn_sample_app_terminate_backend(QnnSampleApp* app);
QnnStatus qnn_sample_app_free_graphs(QnnSampleApp* app);
/*
 * 获取后端生成的版本号字符串。
 * 返回的字符串由内部动态分配，调用者需要使用 free() 释放。
 */
const char* qnn_sample_app_get_backend_build_id(QnnSampleApp* app);
QnnStatus qnn_sample_app_is_device_property_supported(QnnSampleApp* app);
QnnStatus qnn_sample_app_create_device(QnnSampleApp* app);
QnnStatus qnn_sample_app_free_device(QnnSampleApp* app);
/*
 * 加载浮点数输入张量。
 * 参数 inputs 为指向各输入数组的指针数组，sizes 为各数组元素的个数，numInputs 为输入个数，graphIdx 为图索引。
 */
QnnStatus qnn_sample_app_load_float_inputs(QnnSampleApp* app,
                                           const float** inputs,
                                           const size_t* sizes,
                                           size_t numInputs,
                                           int graphIdx);
// 异步函数声明
void qnn_sample_app_create_async(const char* backendPath, 
                              const char* modelPath, 
                              QnnOutputDataType outputDataType, 
                              QnnInputDataType inputDataType, 
                              const char* dataDir,
                              void (*callback)(QnnSampleApp* app, void* userData),
                              void* userData);