lib/qnn_wrapper_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/qnn_wrapper.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class QnnWrapperBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  QnnWrapperBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  QnnWrapperBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// 创建 QnnSampleApp 对象。
  /// 参数 backendPath 和 modelPath 为后端库及模型库文件路径，
  /// outputDataType 与 inputDataType 为数据类型枚举值。
  /// dataDir 为应用数据目录路径，用于切换工作目录。
  /// htpConfig 为HTP后端特定配置，如果不是HTP后端则忽略。
  /// 如果创建失败返回 NULL。
  ffi.Pointer<QnnSampleApp> qnn_sample_app_create(
    ffi.Pointer<ffi.Char> backendPath,
    ffi.Pointer<ffi.Char> modelPath,
    QnnOutputDataType outputDataType,
    QnnInputDataType inputDataType,
    ffi.Pointer<ffi.Char> dataDir,
  ) {
    return _qnn_sample_app_create(
      backendPath,
      modelPath,
      outputDataType.value,
      inputDataType.value,
      dataDir,
    );
  }

  late final _qnn_sample_app_createPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<QnnSampleApp> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.UnsignedInt,
        ffi.UnsignedInt,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('qnn_sample_app_create');
  late final _qnn_sample_app_create =
      _qnn_sample_app_createPtr
          .asFunction<
            ffi.Pointer<QnnSampleApp> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// 释放 QnnSampleApp 对象
  void qnn_sample_app_destroy(ffi.Pointer<QnnSampleApp> app) {
    return _qnn_sample_app_destroy(app);
  }

  late final _qnn_sample_app_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<QnnSampleApp>)>>(
        'qnn_sample_app_destroy',
      );
  late final _qnn_sample_app_destroy =
      _qnn_sample_app_destroyPtr
          .asFunction<void Function(ffi.Pointer<QnnSampleApp>)>();

  /// 以下接口分别包装了 C++ 对象的方法，返回的状态码与 C++ 中保持一致
  QnnStatus qnn_sample_app_initialize(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_initialize(app));
  }

  late final _qnn_sample_app_initializePtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_initialize');
  late final _qnn_sample_app_initialize =
      _qnn_sample_app_initializePtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_initialize_profiling(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_initialize_profiling(app));
  }

  late final _qnn_sample_app_initialize_profilingPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_initialize_profiling');
  late final _qnn_sample_app_initialize_profiling =
      _qnn_sample_app_initialize_profilingPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_create_context(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_create_context(app));
  }

  late final _qnn_sample_app_create_contextPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_create_context');
  late final _qnn_sample_app_create_context =
      _qnn_sample_app_create_contextPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_compose_graphs(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_compose_graphs(app));
  }

  late final _qnn_sample_app_compose_graphsPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_compose_graphs');
  late final _qnn_sample_app_compose_graphs =
      _qnn_sample_app_compose_graphsPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_finalize_graphs(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_finalize_graphs(app));
  }

  late final _qnn_sample_app_finalize_graphsPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_finalize_graphs');
  late final _qnn_sample_app_finalize_graphs =
      _qnn_sample_app_finalize_graphsPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_execute_graphs(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_execute_graphs(app));
  }

  late final _qnn_sample_app_execute_graphsPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_execute_graphs');
  late final _qnn_sample_app_execute_graphs =
      _qnn_sample_app_execute_graphsPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_register_op_packages(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_register_op_packages(app));
  }

  late final _qnn_sample_app_register_op_packagesPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_register_op_packages');
  late final _qnn_sample_app_register_op_packages =
      _qnn_sample_app_register_op_packagesPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_create_from_binary(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_create_from_binary(app));
  }

  late final _qnn_sample_app_create_from_binaryPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_create_from_binary');
  late final _qnn_sample_app_create_from_binary =
      _qnn_sample_app_create_from_binaryPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_save_binary(
    ffi.Pointer<QnnSampleApp> app,
    ffi.Pointer<ffi.Char> outputPath,
    ffi.Pointer<ffi.Char> binaryName,
  ) {
    return QnnStatus.fromValue(
      _qnn_sample_app_save_binary(app, outputPath, binaryName),
    );
  }

  late final _qnn_sample_app_save_binaryPtr = _lookup<
    ffi.NativeFunction<
      ffi.UnsignedInt Function(
        ffi.Pointer<QnnSampleApp>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('qnn_sample_app_save_binary');
  late final _qnn_sample_app_save_binary =
      _qnn_sample_app_save_binaryPtr
          .asFunction<
            int Function(
              ffi.Pointer<QnnSampleApp>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  QnnStatus qnn_sample_app_free_context(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_free_context(app));
  }

  late final _qnn_sample_app_free_contextPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_free_context');
  late final _qnn_sample_app_free_context =
      _qnn_sample_app_free_contextPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_terminate_backend(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_terminate_backend(app));
  }

  late final _qnn_sample_app_terminate_backendPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_terminate_backend');
  late final _qnn_sample_app_terminate_backend =
      _qnn_sample_app_terminate_backendPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_free_graphs(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_free_graphs(app));
  }

  late final _qnn_sample_app_free_graphsPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_free_graphs');
  late final _qnn_sample_app_free_graphs =
      _qnn_sample_app_free_graphsPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  /// 获取后端生成的版本号字符串。
  /// 返回的字符串由内部动态分配，调用者需要使用 free() 释放。
  ffi.Pointer<ffi.Char> qnn_sample_app_get_backend_build_id(
    ffi.Pointer<QnnSampleApp> app,
  ) {
    return _qnn_sample_app_get_backend_build_id(app);
  }

  late final _qnn_sample_app_get_backend_build_idPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<QnnSampleApp>)
    >
  >('qnn_sample_app_get_backend_build_id');
  late final _qnn_sample_app_get_backend_build_id =
      _qnn_sample_app_get_backend_build_idPtr
          .asFunction<
            ffi.Pointer<ffi.Char> Function(ffi.Pointer<QnnSampleApp>)
          >();

  QnnStatus qnn_sample_app_is_device_property_supported(
    ffi.Pointer<QnnSampleApp> app,
  ) {
    return QnnStatus.fromValue(
      _qnn_sample_app_is_device_property_supported(app),
    );
  }

  late final _qnn_sample_app_is_device_property_supportedPtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_is_device_property_supported');
  late final _qnn_sample_app_is_device_property_supported =
      _qnn_sample_app_is_device_property_supportedPtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_create_device(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_create_device(app));
  }

  late final _qnn_sample_app_create_devicePtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_create_device');
  late final _qnn_sample_app_create_device =
      _qnn_sample_app_create_devicePtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  QnnStatus qnn_sample_app_free_device(ffi.Pointer<QnnSampleApp> app) {
    return QnnStatus.fromValue(_qnn_sample_app_free_device(app));
  }

  late final _qnn_sample_app_free_devicePtr = _lookup<
    ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<QnnSampleApp>)>
  >('qnn_sample_app_free_device');
  late final _qnn_sample_app_free_device =
      _qnn_sample_app_free_devicePtr
          .asFunction<int Function(ffi.Pointer<QnnSampleApp>)>();

  /// 加载浮点数输入张量。
  /// 参数 inputs 为指向各输入数组的指针数组，sizes 为各数组元素的个数，numInputs 为输入个数，graphIdx 为图索引。
  QnnStatus qnn_sample_app_load_float_inputs(
    ffi.Pointer<QnnSampleApp> app,
    ffi.Pointer<ffi.Pointer<ffi.Float>> inputs,
    ffi.Pointer<ffi.Size> sizes,
    int numInputs,
    int graphIdx,
  ) {
    return QnnStatus.fromValue(
      _qnn_sample_app_load_float_inputs(
        app,
        inputs,
        sizes,
        numInputs,
        graphIdx,
      ),
    );
  }

  late final _qnn_sample_app_load_float_inputsPtr = _lookup<
    ffi.NativeFunction<
      ffi.UnsignedInt Function(
        ffi.Pointer<QnnSampleApp>,
        ffi.Pointer<ffi.Pointer<ffi.Float>>,
        ffi.Pointer<ffi.Size>,
        ffi.Size,
        ffi.Int,
      )
    >
  >('qnn_sample_app_load_float_inputs');
  late final _qnn_sample_app_load_float_inputs =
      _qnn_sample_app_load_float_inputsPtr
          .asFunction<
            int Function(
              ffi.Pointer<QnnSampleApp>,
              ffi.Pointer<ffi.Pointer<ffi.Float>>,
              ffi.Pointer<ffi.Size>,
              int,
              int,
            )
          >();
